# openvanilla-oranje

Distributions/Autotools/: Makefile.am  README.txt  configure.ac  sync.sh
Distributions/Autotools/DataTables/: Makefile.am
Distributions/Autotools/Frameworks/: Makefile.am
Distributions/Autotools/Frameworks/OpenVanilla/: Makefile.am
Distributions/Autotools/Modules/: Makefile.am
Distributions/Autotools/Modules/OVIMGeneric/: Makefile.am
Distributions/Autotools/Modules/OVIMPhonetic/: Makefile.am
Distributions/Autotools/Modules/SharedLibrary/: Makefile.am
Distributions/Linux/: README.txt  configure.ac  get.sh  sync.sh
Distributions/Linux/DataTables/: Makefile.am  get.sh
Distributions/Linux/Modules/OVIMGeneric/: Makefile.am
