noinst_LIBRARIES = libSharedLibrary.a

libSharedLibrary_a_SOURCES = OVCIN.cpp \
                            OVCIN.h \
                            OVCINInfo.cpp \
                            OVCINInfo.h \
                            OVCandidateList.cpp \
                            OVCandidateList.h \
                            OVFileHandler.cpp \
                            OVFileHandler.h \
                            OVKeySequence.h \
                            OVOSDef.h \
                            OVPhoneticLib.cpp \
                            OVPhoneticLib.h \
                            OVSQLite3.h \
                            OVStringToolKit.cpp \
                            OVStringToolKit.h 

libSharedLibrary_a_CPPFLAGS = -I$(top_srcdir)/Frameworks/OpenVanilla -I$(top_srcdir)/Frameworks/OpenVanilla/Headers
#libSharedLibrary_a_LDFLAGS =
#libSharedLibrary_a_LIBADD =

#EXTRA_DIST= OVIMGeneric-Info.plist
